feat: 유저-일정 간 연관관계 매핑 구현